<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="bogdan_mihalchenko.words.UI.CategoriesListActivity">

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|start"
        app:srcCompat="@drawable/ic_plus"
        />
    <!--<android.support.design.internal.ForegroundLinearLayout
        android:id="@+id/inputCategoryLayout2"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/add_button_bg"
        android:layout_gravity="bottom|end"
        android:padding="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="15dp"
        android:elevation="10dp"

        >
</android.support.design.internal.ForegroundLinearLayout>
-->
    <android.support.design.internal.ForegroundLinearLayout
        android:id="@+id/inputCategoryLayout"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/floating_layout_bg"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:padding="30dp"
        >
        <TextView
            android:id="@+id/dialogTitle"
            android:text="@string/add_category_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.DialogTitle"
            />

        <EditText
            android:id="@+id/etCategoryInput"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width = "300dp"
            android:layout_height="30dp"
            android:paddingBottom="10dp"
            android:background="@color/cardview_light_background"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <Button
                android:id="@+id/addButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ok"
                android:layout_marginRight="4dp"

                android:background="@drawable/button_bg"/>
            <Button
                android:id="@+id/cancelButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginLeft="4dp"
                android:text="@string/add_category_dialog_negative_button"/>

        </LinearLayout>

    </android.support.design.internal.ForegroundLinearLayout>


    <android.support.design.internal.ForegroundLinearLayout
        android:id="@+id/selecTypeOfGame"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/floating_layout_bg"
        android:layout_gravity="top|center"
        android:layout_marginTop="15dp"
        android:padding="30dp"
        >
        <TextView
            android:id="@+id/GameSelectDialogTitle"
            android:text="@string/game_select_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.DialogTitle"
            />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/buttonCards"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:gravity="center"
                android:background="@color/bg_card"
                android:layout_marginRight="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Карточки"
                    style="@style/AppTheme.DialogButtonText"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttonVariants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="5"
                android:gravity="center"
                android:background="@color/bg_card"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Варианты"
                    style="@style/AppTheme.DialogButtonText"/>
            </LinearLayout>



        </LinearLayout>

        <RadioGroup
            android:id="@+id/selectLangType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RadioButton
                android:id="@+id/selectEnglishRussianType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Русский  - Английский"
                android:checked="true"
                style="@style/AppTheme.PlainText"
                />
            <RadioButton
                android:id="@+id/selectRussianEnglishType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Английсикй -  русккий"
                style="@style/AppTheme.PlainText"/>


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <Button
                android:id="@+id/startPlayButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ok"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_bg"
                />
            <Button
                android:id="@+id/cancelPlayButton"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="@drawable/button_bg"
                android:text="@string/add_category_dialog_negative_button"/>

        </LinearLayout>




    </android.support.design.internal.ForegroundLinearLayout>

    <android.support.design.internal.ForegroundLinearLayout
        android:id="@+id/recklama"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/reclama_layout_bg"
        android:layout_gravity="top|center"
        android:layout_marginTop="15dp"
        android:padding="30dp"
        >
       <!-- <TextView
            android:id="@+id/RecklamaTitle"
            android:text="@string/reclama_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.DialogTitle"
            />
-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_ce"/>



        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Хотите знать английский в совершенстве?\nЗапишитесь на курсы английского по SKYPE!"
                />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <Button
                android:id="@+id/goToSite"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Перейти на сайт"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_bg"
                />
            <Button
                android:id="@+id/showLater"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_marginBottom="5dp"
                android:text="Напомнить позже"/>
            <Button
                android:id="@+id/dontShow"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="Больше не показывать"/>


        </LinearLayout>




    </android.support.design.internal.ForegroundLinearLayout>

</android.support.design.widget.CoordinatorLayout>